# ESO-Simulation

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
include/: PIDController.h  SysModal.h  SysModal.hpp  toy_model.h  two_mass_model.h
src/: PIDController.cpp  toy_ESO.cpp  toy_PID.cpp  twoMass_ESO.cpp  twoMass_PID.cpp
test/: main.cpp
